Services overflow fix

--- a/src/components/services/services.module.css
+++ b/src/components/services/services.module.css
@@ -63,6 +63,10 @@
   transition: opacity var(--anim-lg), scale var(--anim-lg);
 }
 
+.serviceImageInline {
+  display: none;
+}
+
 .serviceImage[data-active="true"] {
   opacity: 1;
   scale: 1;
@@ -108,7 +112,6 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-sm);
-  flex: 50% 0 0;
   list-style: none;
 }
 
@@ -133,12 +136,11 @@
     display: none;
   }
 
-  .serviceImage {
-    position: relative;
-    opacity: 1;
-    scale: 1;
+  .serviceImageInline {
     border-radius: var(--radius-sm);
     aspect-ratio: 3 / 2;
+    width: 100%;
+    display: block;
   }
 
   .servicesCategories {
